--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@ skip_missing_interpreters = true
 
 [testenv]
 deps =
-    -r requirements.txt
-    -r test_requirements.txt
+    .[test]
 ; download the latest pip, setuptools and wheel when creating the venv
 download = true
 commands =
@@ -14,7 +13,9 @@ commands =
 [testenv:lint]
 skip_install = true
 deps =
-    -r test_requirements.txt
+    black
+    isort
+    flake8-bugbear
 commands =
     black --check --diff --extend-exclude "_version.py|axes*" .
 
