--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ default = ["fontations"]
 
 [dependencies]
 bytes = "1.7.1"
-prost = "0.13"
+gf-metadata = "0.2.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 fontations = { version = "0.3.0", optional = true }
@@ -21,15 +21,10 @@ indexmap = "2.7.0"
 pretty_assertions = "1.4.1"
 
 [build-dependencies]
-prost-build = "0.13"
-protobuf-support = "3.7.1"
-protobuf = "3.7.1"
-protobuf-parse = "3.7.1"
-protox = "0.8"
 glob = "0"
 prettyplease = "0.2"
 quote = "1.0"
 proc-macro2 = "1.0"
 syn = "2.0"
 itertools = "0.13"
-serde_json = "1.0"
+gf-metadata = "0.2.4"
